--- a/MemeMe10/Base.lproj/Main.storyboard
+++ b/MemeMe10/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
@@ -7,10 +7,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Meme Editor View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="MemeMe10" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="MemeEditorViewController" customModule="MemeMe10" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -48,20 +48,20 @@
                                     </navigationItem>
                                 </items>
                             </navigationBar>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="2tl-Iu-0T3">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="2tl-Iu-0T3">
                                 <rect key="frame" x="0.0" y="303" width="414" height="300"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="300" id="D5A-UC-hpH"/>
                                 </constraints>
                             </imageView>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="center" adjustsFontForContentSizeCategory="YES" minimumFontSize="20" translatesAutoresizingMaskIntoConstraints="NO" id="bGn-lA-pCr" userLabel="Top Text Field">
-                                <rect key="frame" x="20" y="109" width="374" height="35"/>
+                                <rect key="frame" x="20" y="129" width="374" height="35"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="center" minimumFontSize="40" translatesAutoresizingMaskIntoConstraints="NO" id="QZ5-DY-b3d" userLabel="Bottom Text Field">
-                                <rect key="frame" x="20" y="777" width="374" height="35"/>
+                                <rect key="frame" x="20" y="747" width="374" height="35"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters"/>
                             </textField>
@@ -72,15 +72,17 @@
                             <constraint firstItem="2tl-Iu-0T3" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="5bL-CJ-Wev"/>
                             <constraint firstItem="QZ5-DY-b3d" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="BH6-5a-oQQ"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="bGn-lA-pCr" secondAttribute="trailing" constant="20" id="DH0-Id-YwH"/>
+                            <constraint firstItem="2tl-Iu-0T3" firstAttribute="bottom" relation="lessThanOrEqual" secondItem="vot-4J-K7M" secondAttribute="top" id="DoK-QO-Q08"/>
                             <constraint firstAttribute="bottom" secondItem="vot-4J-K7M" secondAttribute="bottom" id="G6W-mv-Fa6"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="QZ5-DY-b3d" secondAttribute="trailing" constant="20" id="HQ5-JU-lgN"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="top" secondItem="bGn-lA-pCr" secondAttribute="bottom" constant="-100" id="Hxf-ff-LOH"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="top" secondItem="bGn-lA-pCr" secondAttribute="bottom" constant="-120" id="Hxf-ff-LOH"/>
                             <constraint firstItem="vot-4J-K7M" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Is8-4f-96n"/>
                             <constraint firstItem="2tl-Iu-0T3" firstAttribute="centerX" secondItem="aPF-mh-40y" secondAttribute="centerX" id="JMh-co-rJU"/>
-                            <constraint firstItem="QZ5-DY-b3d" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" constant="-50" id="WKC-Ue-hRu"/>
+                            <constraint firstItem="QZ5-DY-b3d" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" constant="-80" id="WKC-Ue-hRu"/>
                             <constraint firstItem="vot-4J-K7M" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="YUB-s3-Mqf"/>
                             <constraint firstItem="bGn-lA-pCr" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="aOu-oe-XgY"/>
                             <constraint firstItem="2tl-Iu-0T3" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="cod-cz-z8O"/>
+                            <constraint firstItem="2tl-Iu-0T3" firstAttribute="top" relation="greaterThanOrEqual" secondItem="aPF-mh-40y" secondAttribute="bottom" id="dFZ-vJ-WzZ"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="2tl-Iu-0T3" secondAttribute="trailing" id="lE9-2h-egz"/>
                             <constraint firstItem="aPF-mh-40y" firstAttribute="leading" secondItem="vot-4J-K7M" secondAttribute="leading" id="nh9-gL-vp8"/>
                             <constraint firstItem="QZ5-DY-b3d" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="ooT-hE-sKO"/>
